# stabrank

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: publish.yml  tests.yml
cpp/: CMakeLists.txt
cpp/include/stabrank/: clifford.hpp  fidelity.hpp  linalg.hpp  pauli.hpp  polynomial.hpp  sa_engine.hpp  types.hpp
cpp/src/: clifford.cpp  fidelity.cpp  linalg.cpp  pauli.cpp  polynomial.cpp  sa_engine.cpp
cpp/tests/: bench_kernels.cpp  test_kernel_properties.cpp  test_linalg.cpp  test_pauli.cpp  test_polynomial.cpp  test_sa_engine.cpp
docs/: index.html  refs.bib  styles.css
lean_proofs/: LeanProofs.lean  README.md  lake-manifest.json  lakefile.toml
lean_proofs/LeanProofs/: Basic.lean  H3M2Pointwise.lean  H3M3.lean  H3M3Pointwise.lean  H3Shared.lean  NorrellM2Pointwise.lean  NorrellM3.lean  NorrellM3Pointwise.lean  NorrellM4Pointwise.lean  NorrellShared.lean  QubitTM4.lean  StrangeM2Pointwise.lean  StrangeM3.lean  StrangeM3Pointwise.lean
lean_proofs/LeanProofs/Stabilizer/: Rank.lean
python/: CMakeLists.txt  bindings.cpp
scripts/research/orbit_paper/: README.md  _certificate_metadata.py  _paths.py  check_strange_orbit_moulton.py  exhaustive_pair_search.py  exhaustive_triple_search.py  exhaustive_triple_search_numba.py  extract_decomposition.py  launch_triple_search.sh  post_triple_search.sh  run_orbit_sa.py  search_two_copy_conversion.py  squeeze_orbit_sa.py  sweep_orbit_lower_bounds.py  verify_certificates.py  verify_gadget_no_go.py  verify_h3_chi4.py  verify_norrell_m4_chi7.py  verify_qubit_decompositions.py  verify_qutrit_decompositions.py  verify_two_copy_protocols.py  watch_h3_then_promote.sh
stabrank/: __init__.py  analysis_utils.py  cat6_repair.py  cat6_tensor.py  cs_ratio_sdp_mosek.py  linalg_utils.py  mana.py  polynomial_utils.py  qutrit_clifford.py  stabilizer_extent.py  target_functions.py  ternary_sweep.py
stabrank/examples/: README.md  magic_code_state_example.py  qubit_real_example.py  qubit_t_type_example.py  qutrit_complex_example.py  qutrit_magic_code_state_example.py  qutrit_real_example.py  qutrit_strange_example.py  sweep_code_states.py  sweep_qubit_lower_bounds.py  sweep_qutrit_code_states.py  sweep_qutrit_lower_bounds.py
stabrank/lower_bounds/: m5.json  m6.json
stabrank/representations_found/: cat4.md  cat5.md
tests/: test_bindings.py  test_cat6_repair.py  test_cat6_tensor.py  test_code_states.py  test_exhaustive_pair_search.py  test_exhaustive_triple.py  test_exhaustive_triple_numba.py  test_public_api.py  test_qutrit_clifford.py  test_stabilizer_extent.py  test_ternary_sweep.py
